--- a/app/views/blog_posts/resources.html.erb
+++ b/app/views/blog_posts/resources.html.erb
@@ -233,7 +233,7 @@ a.leftColumnTitleOfSource:hover {
 
 		</div>
 		<div class="six columns" id="blogSearchFieldContainer">
-			<form accept-charset="UTF-8" action="/pages/blog_search" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+			<form accept-charset="UTF-8" action="/blog_posts/blog_search" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
 				<div class="blogSearchMagGlassContainer">
 					<input id="searchbutton" value="search" type="image" src="https://s3-us-west-1.amazonaws.com/volunteervoice/images/magGlassSmaller.png" id="blogSearchMagGlassButton" alt="Search Button" onmousedown="this.className = 'shadowed'" onmouseup="this.className='nothing'">
 				</div>
