--- a/app/views/blog_posts/resources_search.html.erb
+++ b/app/views/blog_posts/resources_search.html.erb
@@ -160,7 +160,7 @@ p.weveGotNothinBlurb {
 
 		</div>
 		<div class="six columns" id="blogSearchBarContainer">
-			<form accept-charset="UTF-8" action="/pages/blog_search" method="get">
+			<form accept-charset="UTF-8" action="/blog_posts/blog_search" method="get">
 				<input name="utf8" type="hidden" value="&#x2713;" />
 				<div class="blogSearchButtonContainer">
 					<input id="searchbutton" value="search" type="image" src="https://s3-us-west-1.amazonaws.com/volunteervoice/images/magGlassSmaller.png" alt="Search Button" onmousedown="this.className = 'shadowed'" onmouseup="this.className='nothing'">
