--- a/app/views/mad_mimi_emails/new.html.erb
+++ b/app/views/mad_mimi_emails/new.html.erb
@@ -1,5 +1,31 @@
-<h1>New mad_mimi_email</h1>
+<%= javascript_include_tag "/assets/jquery.js"%>
+
+
+<style>
+.top {
+	padding:30px;
+}
+#pageTitle { 
+	font-size: 2.5em; 
+	text-align:center; 
+	margin-top:20px; 
+	margin-bottom:10px; 
+	color:#575758; 
+}
+#bcc {
+	margin-bottom:30px;
+}
+input {
+	margin-bottom:10px;
+	height:25px;
+	width:250px;
+}
+#submitButton {
+	text-align:center;
+	float:center;
+}
+</style>
+
+<p id="pageTitle">New mad_mimi_email</p>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', mad_mimi_emails_path %>
