fixing bugs from code cleanup

--- a/app/views/mad_mimi_emails/new.html.erb
+++ b/app/views/mad_mimi_emails/new.html.erb
@@ -15,14 +15,19 @@
 #bcc {
 	margin-bottom:30px;
 }
-input {
-	margin-bottom:10px;
-	height:25px;
-	width:250px;
+input[type="text"] {
+	margin-bottom: 10px;
+	height: 25px;
+	width: 500px;
+	padding-left: 5px;
+	margin-left: 5px;
 }
 #submitButton {
-	text-align:center;
+	margin:auto;
 	float:center;
+}
+#submit_div {
+	text-align:center;
 }
 </style>
 
