fixing bugs from code cleanup

--- a/app/views/mad_mimi_emails/new.html.erb
+++ b/app/views/mad_mimi_emails/new.html.erb
@@ -33,4 +33,46 @@ input[type="text"] {
 
 <p id="pageTitle">New mad_mimi_email</p>
 
-<%= render 'form' %>
+<div class="container top">
+	<div class="row">
+		<div class="ten columns">
+
+<%= form_for @mad_mimi_email do |f| %>
+<% @proms = []%>
+<% MadMimi.new('sarahsponda902@gmail.com', "df65cf0a215c2b3028fa7eaf89a6f2ba").promotions.values.first.values.first.each do |f|%>
+<% @spot = f.keys.index("name")%>
+<% @proms << f.values[@spot]%>
+<% end %>
+Promotion Name: <%= f.select :promotion_name, @proms%><br />
+Email Subject:<%= f.text_field :subject%><br />
+From (must be of this format): <%= f.text_field :from, :value => "Alyssa Ely <aely@volunteervoice.org>", :id => "fromEmail"%><br />
+Recipients: <%= f.select :list_names, [["Users", "users"], ["Admins", "admins"], ["Organizations", "organizations"]]%><br />
+<%= f.hidden_field :username, :value => "sarahsponda902@gmail.com"%><br />
+<%= f.hidden_field :api_key, :value => "df65cf0a215c2b3028fa7eaf89a6f2ba"%><br />
+BCC: <%= f.text_field :bcc, :id => "bcc"%><br />
+<div id="submit_div">
+<%= image_submit_tag "https://s3-us-west-1.amazonaws.com/volunteervoice/images/submitGreen.png", :id => "submitButton"%>
+</div>
+<% end %>
+</div>
+</div>
+</div>
+
+<script>
+$(document).ready(function() {
+	//if webkit, add a dropdown arrow to the select box, since we took it out with "-webkit-appearance:none" in /assets/style.css
+	if ($.browser.webkit) {
+		input = document.getElementById("mad_mimi_email_promotion_name");
+		input.style.background = "url('/assets/arrowProgram.png') no-repeat right";
+		input.style.height = "25px";
+		input.style.backgroundColor = "white";
+		input.style.width = "150px";
+		
+		input2 = document.getElementById("mad_mimi_email_list_names");
+		input2.style.background = "url('/assets/arrowProgram.png') no-repeat right";
+		input2.style.height = "25px";
+		input2.style.backgroundColor = "white";
+		input2.style.width = "150px";
+	}
+});
+</script>
