fixing bugs from code cleanup

--- a/app/views/mad_mimi_emails/new.html.erb
+++ b/app/views/mad_mimi_emails/new.html.erb
@@ -35,7 +35,7 @@ input[type="text"] {
 
 <div class="container top">
 	<div class="row">
-		<div class="ten columns">
+		<div class="twelve columns">
 
 <%= form_for @mad_mimi_email do |f| %>
 <% @proms = []%>
