fixing bugs from code cleanup

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -580,7 +580,7 @@ $(document).ready(function() {
 
    <script type="text/javascript">
 
-       $(document).ready(function () {
+       $(document).ready(function() {
 			/*
 			if (<%=# (@user.profile_show).to_s %> == true)
 			{
@@ -600,9 +600,15 @@ $(document).ready(function() {
 </script>
 
 <script type="text/javascript">
-$("#btnPrev").click(function() { currentPage = parseInt(list.find('li a.active').text()) - 1; navigate(currentPage); }).addClass('btn');
+$("#btnPrev").click(function() { 
+	currentPage = parseInt(list.find('li a.active').text()) - 1; 
+	navigate(currentPage); 
+	}).addClass('btn');
 
-$("#btnNext").click(function() { currentPage = parseInt(list.find('li a.active').text()); navigate(currentPage); }).addClass('btn');
+$("#btnNext").click(function() { 
+	currentPage = parseInt(list.find('li a.active').text()); 
+	navigate(currentPage); 
+	}).addClass('btn');
 </script>
 
 <script type="text/javascript">
