fixing bugs from code cleanup

--- a/app/views/organization_accounts/_bigStar.html.erb
+++ b/app/views/organization_accounts/_bigStar.html.erb
@@ -40,5 +40,5 @@
 	<% end %>
 	
 	<% if star.to_f == 0%>
-	<%= image_tag "/assets/big_stars_0.png", :height => "150%"%>
+	<%= image_tag "https://s3-us-west-1.amazonaws.com/volunteervoice/images/big_stars_0.png", :height => "150%"%>
 	<% end %>
