--- a/app/views/searches/_programs_results.html.erb
+++ b/app/views/searches/_programs_results.html.erb
@@ -17,7 +17,7 @@
 			<td colspan="2"><p class="progCategoriesContainer">Category: <span class=" progSubjects">
 			<%=f.program_subjects.map{|p| p.subject}.join(", ")%>
 				</span></p>
-				<p class="progDescription"><%= f.truncated_description100.html_safe%></p>
+				<p class="progDescription"><%= truncate(untextilized(f.description), :length => 100).html_safe%></p>
 			</td>
 		</tr>
 	</table>
