--- a/app/views/blog_posts/_blog_post.html.erb
+++ b/app/views/blog_posts/_blog_post.html.erb
@@ -31,7 +31,7 @@ a.blogPostUserLink:hover {
 	font-size:1.1em; 
 	margin-top:10px;
 }
-.lineBeforeComments { /* line separating each blog post from the next */
+.lineBeforeComments { /* line separating each blog post from the comments */
 	width:100%;
 	height:1px;
 	background-color:#575758;
@@ -57,33 +57,44 @@ a.blogPostUserLink:hover {
 	<p class="blogPostPostedAt">
 		Posted
 		By <span class="blogPoster">
-			<a class="blogPostUserLink" href="/users/<%=User.find(blog_post.user_id).id%>"><!-- username link>
-			<%= User.find(blog_post.user_id).username %><!-- username text -->
+			<a class="blogPostUserLink" href="/users/<%=User.find(blog_post.user_id).id%>">
+			<%= User.find(blog_post.user_id).username %>
 			</a>
 			</span>
 		on 
 		<span class="blogPostDate"><%= blog_post.updated_at.to_date.strftime("%m/%e/%Y").gsub(/^0/, '')%></span>
-	</p><!-- end date posted -->
+	</p><!-- end posted by & date posted -->
 
+	<!-- body (text) of blog post -->
 	<div class="blogPostBody">
 		<%= blog_post.body.html_safe %> 
-	</div>
+	</div><!-- end blog post body -->
+	
 	<br />
 	<br />
+	
+	<!-- blog post footer (comment count & admin links) -->
 	<p class="blogFooter">
 		<ul class="blogList">
-			<li class="blogListFirst"><%=pluralize(blog_post.blog_comments.count, 'comment') %></li>
-
+			
+			<!-- comment count -->
+			<li class="blogListFirst">
+			<%=pluralize(blog_post.blog_comments.count, 'comment') %>
+			</li><!-- end comment count -->
 
 			<% if user_signed_in? && current_user.admin? %>
 			<li><%= link_to('Edit Post', edit_blog_post_path(blog_post))%></li>
-			<% @location = request.path%>
-			<% @location = @location.split("/")%>
-			<% @location = @location[2]%>
+			
+			<!-- the following line is for sending admin to correct place after delete -->
+			<% @location = request.path.split("/")[2]%>
+			
 			<li><%= link_to 'Delete', :controller => "blog_posts", :action => "destroy", :id => blog_post.id, :location => @location %></li>
 			<% end %>
 		</ul>
-	</p>
+	</p><!-- end blog post footer -->
+	
+	<!-- blog post comments -->
+		<!-- note: blog_post comments are defined in blog_posts/comments -->
 	<% if !(defined?(show_comments))%>
 	<div class="lineBeforeComments"></div><br />
 	<% end %>
@@ -91,9 +102,9 @@ a.blogPostUserLink:hover {
 	<% if defined?(show_comments) %>
 	<%= render :partial => 'blog_posts/comments' %>
 	<%= render :partial => 'blog_comments/new_blog_comment', :locals => {:blog_comment => @blog_comment} %>
-	<% end %>
-
-
+	<% end %><!-- end blog post comments-->
+	
+	<!-- the following line ensures the next blog post will be on a new, separate line -->
 	<br style="clear: both;" />
-</div>
+</div><!-- end blogPost -->
 
